# vdms

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  INSTALL.md  README.md  SConstruct  config-athena.json  config-vdms.json  json_schema.json  run_server.sh  run_server_test.sh
client/cpp/: BoundingBoxQueryParser.h  CMakeLists.txt  CSVParser.h  CSVParserUtil.cpp  CSVParserUtil.h  ConnectionQueryParser.h  DescriptorQueryParser.h  DescriptorSetQueryParser.h  EntityQueryParser.h  ImageQueryParser.h  SConscript  VDMSClient.cc  VDMSClient.h  VideoQueryParser.h  rapidcsv.h
distributed/: .gitignore  CMakeLists.txt  adaptive_platform.cpp  docker-compose.yml  helpers.h  init_system.py  kafka-compose.yml  kafka_receiver.h  kafka_sender.h  kafka_test.cpp  mutli_modal.cpp  utils.h
distributed/config/: default_config.json
distributed/data_store/: Dockerfile
distributed/docker/: Dockerfile-manager  Dockerfile-worker
distributed/docs/: Doxyfile
distributed/kafka/: Dockerfile  config_kafka.py  stub_server.properties  zookeeper.properties
distributed/manager/: CMakeLists.txt  ClientServiceThread.java  Dockerfile  PluginSample.java  QueueServiceThread.java  TestServer.java  VdmsTransaction.java  WorkerConnection.java  WorkerConnectionList.java  manifest.mf  worker_manager.py
distributed/plugins/: AutoDeletePlugin.java  AutoPublisherServiceThread.java  CMakeLists.txt  Dockerfile  PassList.java  Plugin.java  PublisherServiceThread.java  QueryList.java  QueueServiceThread.java  RepeaterPlugin.java  ServerServiceThread.java  SourceConnection.java  SubscriberServiceThread.java  TcpVdmsConnection.java  TestFilter.java  TestPlugin.java  UnitTests.java  VdmsConnection.java  VdmsTransaction.java  WorkerConnection.java  WorkerConnectionList.java  manifest-auto.mf  manifest-filter.mf  manifest-repeater.mf
distributed/system_config/: default_config.json
distributed/worker/: Dockerfile  config_vdms.py
distributed/zookeeper/: Dockerfile  README.md  start.sh  zoo.cfg
ext/custom_vcl/: CMakeLists.txt  LICENSE  README.md  custom_vcl_process.cc
ext/custom_vcl/sample_query/: sample_query.py
src/vcl/: CMakeLists.txt  CustomVCL.cc  DescriptorParams.cc  DescriptorParams.h  DescriptorSet.cc  DescriptorSetData.cc  DescriptorSetData.h  Doxyfile  Exception.cc  FaissDescriptorSet.cc  FaissDescriptorSet.h  FlinngDescriptorSet.cc  FlinngDescriptorSet.h  Image.cc  ImageData.cc  ImageData.h  KeyFrame.cc  KeyFrameParser.cc  RemoteConnection.cc  TDBDenseDescriptorSet.cc  TDBDescriptorSet.cc  TDBDescriptorSet.h  TDBImage.cc  TDBImage.h  TDBObject.cc  TDBObject.h  TDBSparseDescriptorSet.cc  Video.cc  VideoData.cc  VideoData.h  utils.cc
tests/: Add3Videos.json  AddAndFind_query.json  AddFindUpdate.json  CMakeLists.txt  FindVideo.json  FindVideoAllOperations.json  Queries.json  QueryHandlerTester.cc  QueryHandlerTester.h  QuerySample.json  SConscript  TestScript.py  VideoAdd.json  VideoAddFindUpdate.json  VideoCrop.json  VideoCropResizeThreshold.json  VideoResize.json  VideoThreshold.json  VideoThresholdInterval.json  addImage-config.json  add_image.cc  cleandbs.sh  config-add10-tests.json  config-addfind-tests.json  config-pmgd-tests.json  config-tests.json  config-update-tests.json  default-config-testing.json  json_queries.cc  json_query_test.cc  main.cc  newAPI.json  pmgd_queries.cc  query_sample.json  run_all_tests.py  run_aws_tests.sh  run_neo4j_backend_tests.sh  run_neo4j_tests.sh  run_tests.sh
tests/csv_samples/: CSVformat100.csv  Descriptor.csv  DescriptorSet.csv  Image.csv  Rectangle.csv  Video.csv  blob_1.txt  connection.csv  person.csv
tests/python/: .coveragerc  TestBoundingBox.py  TestCommand.py  TestConnections.py  TestDescriptors.py  TestEngineDescriptors.py  TestEntities.py  TestEntitiesBlobs.py  TestFindDescriptorSet.py  TestFindDescriptors.py  TestImages.py  TestRetail.py  TestTLS.py  TestTestCommand.py  TestVDMSClient.py  TestVideos.py  addImage.py  clean.sh  config-aws-tests.json  config-tests.json  config-tls-aws-tests.json  config-tls-tests.json  longquery.py  main.py  prep.py  run_python_aws_tests.sh  run_python_tests.sh
tests/remote_function_test/: requirements.txt  udf_server.py
tests/remote_function_test/functions/: caption.py  flip.py  metadata.py
tests/server/: AddFindDescriptorSet.json  AddFindUpdate.json  AddFindUpdate_blob.json  AutoDeleteNodeInit.json  AutoDeleteNodeTest.json  CustomFunctionNoProcess.json  DataTypeChecks.json  EmptyResultChecks.json  QueryHandlerTester.h  config-add10-tests.json  config-addfind-tests.json  config-auto-replicate-tests.json  config-datatype-tests.json  config-emptyresult-tests.json  config-tests.json  config-update-tests.json  json_queries.cc
tests/tls_test/: prep-tls-tests.py  prep_certs.py  run_tls_test_client.py  run_tls_test_server.py
tests/udf_test/: requirements.txt  settings.json  udf_local.py
tests/udf_test/functions/: caption.py  flip.py  metadata.py
tests/unit_tests/: BackendNeo4jTest.cc  Comm_tests.cc  DescriptorSetAdd_test.cc  DescriptorSetClassify_test.cc  DescriptorSetReadFS_test.cc  DescriptorSetStore_test.cc  DescriptorSetTrain_test.cc  EndToEndNeo4jTest.cc  ImageData_test.cc  Image_test.cc  OpsIoTest.cc  RemoteConnection_test.cc  SystemStats_test.cc  TDBImage_test.cc  TDBObject_test.cc  TLSTest.cc  TimerMapTest.cc  VDMSConfig_test.cc  VideoData_test.cc  Video_test.cc  client_add_entity.cc  client_blob.cc  client_bounding_box.cc  client_csv.cc  client_descriptors.cc  client_find_entities.cc  client_image.cc  client_videos.cc  config-aws-tests.json  config-client-tests.json  config-for-vdms-config-v1-tests.json  config-for-vdms-config-v2-tests.json  config-for-vdms-config-v3-tests.json  config-neo4j-e2e.json  config-pmgd-tests.json  config-tests.json  connection.json  helpers.cc  helpers.h  json_queries.cc  (+6 more)
utils/: CMakeLists.txt  SConscript  SConstruct
utils/include/chrono/: Chrono.h
utils/include/comm/: Connection.h  ExceptionComm.h
utils/include/stats/: SystemStats.h
utils/include/timers/: TimerMap.h
utils/src/api_schema/: api_schema.json  createApiString.py
utils/src/chrono/: Chrono.cc
(+210 files in other folders)
