cmake_minimum_required (VERSION 3.17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
set(CMAKE_CXX_STANDARD 17)
project(custom_vcl_application)
find_package( OpenCV REQUIRED )
find_package(AWSSDK REQUIRED COMPONENTS s3)

link_directories(/usr/local/lib /usr/lib/x86_64-linux-gnu/)
include_directories(.  ../../src ../../include/  ../../src/vcl /usr/include/jsoncpp ${OpenCV_INCLUDE_DIRS})
add_executable(custom_vcl custom_vcl_process.cc )
target_link_libraries(custom_vcl vcl tbb tiledb jsoncpp ${OpenCV_LIBS} ${AWSSDK_LINK_LIBRARIES})